--- a/Game/GDKShooter.uproject
+++ b/Game/GDKShooter.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{067CF2EF-4C51-8EAD-8AAA-359FADE0EFB0}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
